# llm_chat_app

./: .gitignore  PROJECT_PLAN.md  README.md  package-lock.json  package.json
.cursor/plans/: llm_chat_desktop_app_46656586.plan.md
.github/workflows/: release.yml
docs/: desktop-build.md  macos-sidecar-bun.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ContextPane.tsx  ConversationPane.tsx  CustomModelManager.tsx  MessageContent.tsx  MessageInput.tsx  ModelSelector.tsx  ModelSettings.tsx  Sidebar.tsx
frontend/src/lib/: collapse.ts  db.ts  keychain.ts  mergeSystem.ts  sidecarClient.ts  tauriBridge.ts
frontend/src/stores/: chatStore.ts  conversationListStore.ts  modelStore.ts
sidecar/: package.json  providers.json  tsconfig.json
sidecar/scripts/: build-sidecar.mjs
sidecar/src/: index.ts  types.ts
sidecar/src/adapters/: anthropic.ts  base.ts  gemini.ts  glm.ts  openaiCompatible.ts  registry.ts
sidecar/src/routes/: chat.ts
sidecar/src/services/: contextManager.ts  tokenCounter.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_seed_model_profiles.sql
src-tauri/src/: main.rs
