[package]
name = "llm-chat-app"
version = "0.1.0"
description = "Tauri shell for LLM chat app"
authors = ["leey"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

tauri-plugin-sql = { version = "2.4", features = ["sqlite"] }
tauri-plugin-stronghold = "2.3"
tauri-plugin-shell = "2.3"
log = "0.4"

# Tauri Stronghold: recommended by https://v2.tauri.app/plugin/stronghold/
[profile.dev.package.scrypt]
opt-level = 3

[profile.release.package.scrypt]
opt-level = 3
